# kernel-coroutine

./: .gitignore  CMakeLists  CMakeLists.txt  Makefile  allocation_map.txt  allocation_map_1mil.txt  allocation_map_generator.py  apl  apl.c  c_coro.c  common.c  copy_toy  copy_toy.c  coro.c  coro_copy_toy.c  default_ll  default_ll.c  hello  ll  ll.c  objdump_apl_amac.S  objdump_apl_default.S  perf.data  perf.data.old  regular_copy_toy.c  requests.txt  requests_generator.py  run_copy_toy_perf_record.sh  skiplist  skiplist.c  test_runner.py  zipf_small_keys.txt
1mil/: alloc_all.txt  mixed_a_d.txt
32/: alloc_all.txt  alloc_d.txt  allocation_map.txt
coreinfo64/: desktop.txt
coro/: Makefile  coro  coro.c  coro_simplified  coro_simplified.c
kernel_code/: mm_init.c  mm_types.h  page_alloc.c
old/: coro_updated.c  uniform_small_keys.txt
requests_10mil/: alloc_all.txt
